# Project-LLM-Reviewer

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.original.md  LICENSE  pyproject.toml
.claude/: settings.json
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
plans/: task2-human-vs-ai-comparison.md
scripts/: compare_reviews.py  inspect_db.py  run_reviews.py  verify_comparisons.py
src/reviewer/: comparison.py  config.py  db.py  normalizer.py  pipeline.py  storage.py
